@@ -24,32 +24,31 @@ import lombok.extern.slf4j.Slf4j;
 @Primary
 public class GroqLlmClient implements LlmClient {
 
-	@Qualifier("groqApiWebClient")
-	private final WebClient groqApiWebClient;
-	private final ObjectMapper objectMapper;
-	private final TokenBucketRateLimiter tokenBucketRateLimiter;
-
 	private static final String DEFAULT_MODEL = "llama-3.3-70b-versatile";
 	private static final String shortDescriptionPrompt = """
 		ROLE
 		- You are a copywriter for tourist spots.
-
+		
 		TASK
 		- Write exactly ONE Korean sentence about the given place.
-
+		
 		HARD CONSTRAINTS
 		- Only use facts from the input. Do NOT add places, dishes, or claims.
 		- Length: ≤ 15 Korean characters (권장: 10~15).
 		- Must include at least one factual keyword (ex. place name, city, landmark, ocean, mountain).
 		- Plain Korean text only (no emojis, no English, no commas).
 		- If the input is unrelated to tourist spots OR lacks usable info, output exactly: 해당 없음
-
+		
 		STYLE
 		- Mix factual information with emotional expression.
 		- Deliver both clarity (what/where) and feeling (why it’s special).
 		- Use simple, catchy words that feel natural in SNS captions.
 		- End naturally on a meaningful word (no trailing quotes, punctuation, or particles like '이다', '합니다').
-				""";
+		""";
+	@Qualifier("groqApiWebClient")
+	private final WebClient groqApiWebClient;
+	private final ObjectMapper objectMapper;
+	private final TokenBucketRateLimiter tokenBucketRateLimiter;
 
 	@Override
 	public String requestGroqShortDescription(String prompt) {
@@ -70,7 +69,7 @@ public class GroqLlmClient implements LlmClient {
 				.block();
 
 			if (res != null && res.getChoices() != null && !res.getChoices().isEmpty()) {
-				return sanitizePlainText(res.getChoices().get(0).getMessage().getContent());
+				return sanitizePlainText(res.getChoices().getFirst().getMessage().getContent());
 			}
 		} catch (Exception e) {
 			log.error("Groq API 요청 실패: {}", e.getMessage(), e);
